<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">



  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>
  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <configuration>
            <archive>
              <manifest>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              </manifest>
            </archive>
          </configuration>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <artifactId>mapstruct-processor</artifactId>
                <groupId>org.mapstruct</groupId>
                <version>${org.mapstruct.version}</version>
              </path>
              <path>
                <artifactId>lombok</artifactId>
                <groupId>org.projectlombok</groupId>
                <version>${org.projectlombok.version}</version>
              </path>
              <path>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <groupId>org.projectlombok</groupId>
                <version>${org.projectlombok.lombok-mapstruct-binding.version}</version>
              </path>
            </annotationProcessorPaths>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.9.1</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.5</version>
          <configuration>
            <gpgArguments>
              <arg>--pinentry-mode</arg>
              <arg>loopback</arg>
            </gpgArguments>
          </configuration>
          <executions>
            <execution>
              <id>sign-artifacts</id>
              <phase>verify</phase>
              <goals>
                <goal>sign</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.7</version>
          <extensions>true</extensions>
          <configuration>
            <serverId>ossrh</serverId>
            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
            <autoReleaseAfterClose>true</autoReleaseAfterClose>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
    <dependency>
      <artifactId>pdfbox</artifactId>
      <groupId>org.apache.pdfbox</groupId>
      <version>2.0.26</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>${org.projectlombok.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <dependency>
      <artifactId>jackson-databind</artifactId>
      <groupId>com.fasterxml.jackson.core</groupId>
      <version>2.13.3</version>
    </dependency>

    <dependency>
      <artifactId>httpclient</artifactId>
      <groupId>org.apache.httpcomponents</groupId>
      <version>4.5.13</version>
    </dependency>

    <dependency>
      <artifactId>httpmime</artifactId>
      <groupId>org.apache.httpcomponents</groupId>
      <version>4.5.13</version>
    </dependency>

    <dependency>
      <artifactId>picocli</artifactId>
      <groupId>info.picocli</groupId>
      <version>4.6.3</version>
    </dependency>

    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${org.mapstruct.version}</version>
    </dependency>


    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/mockwebserver -->
    <dependency>
      <artifactId>mockwebserver</artifactId>
      <groupId>com.squareup.okhttp3</groupId>
      <scope>test</scope>
      <version>4.9.3</version>
    </dependency>


    <dependency>
      <artifactId>junit-jupiter-engine</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.jupiter.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.jupiter.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-params</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>${junit.jupiter.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-platform-suite</artifactId>
      <groupId>org.junit.platform</groupId>
      <scope>test</scope>
      <version>${junit.platform.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
    <dependency>
      <artifactId>mockito-junit-jupiter</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>4.5.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
    <dependency>
      <artifactId>mockito-inline</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>4.6.1</version>
    </dependency>

  </dependencies>


  <groupId>com.mindee.sdk</groupId>
  <artifactId>mindee-api-java</artifactId>
  <modelVersion>4.0.0</modelVersion>

  <name>Mindee Java Helper Library</name>
  <description>Java Library to call Mindee's Off The Shelf and Custom APIs</description>
  <url>https://github.com/mindee/mindee-api-java</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://github.com/mindee/mindee-api-java/blob/main/LICENSE</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Vivek Padmanabhan</name>
      <email>vivek@mindee.com</email>
      <organization>Mindee</organization>
      <organizationUrl>https://mindee.com/</organizationUrl>
    </developer>
    <developer>
      <name>Ianaré Sévi</name>
      <email>ianare@mindee.com</email>
      <organization>Mindee</organization>
      <organizationUrl>https://mindee.com/</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/mindee/mindee-api-java.git</connection>
    <developerConnection>scm:git:ssh://github.com:mindee/mindee-api-java.git</developerConnection>
    <url>http://github.com/mindee/mindee-api-java/tree/main</url>
  </scm>



  <properties>
    <junit.jupiter.version>5.8.1</junit.jupiter.version>
    <junit.platform.version>1.8.1</junit.platform.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
    <org.projectlombok.lombok-mapstruct-binding.version>0.2.0
    </org.projectlombok.lombok-mapstruct-binding.version>
    <org.projectlombok.version>1.18.24</org.projectlombok.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <version>1.0-SNAPSHOT</version>
</project>
